# stockpilot-oms

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml  run-backend.ps1  run-frontend.ps1  run-local.ps1  vercel.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: activity.py  alerts.py  analytics.py  (+7 more)
backend/app/core/: config.py  error_handlers.py  exceptions.py  pagination.py  security.py
backend/app/db/: connection.py  session.py
backend/app/repositories/: __init__.py  activity_repository.py  alert_repository.py  analytics_repository.py  auth_repository.py  inventory_repository.py  order_repository.py  product_repository.py  sql_utils.py  supplier_repository.py  warehouse_repository.py  workspace_repository.py
backend/app/schemas/: activity.py  alert.py  analytics.py  auth.py  common.py  inventory.py  order.py  product.py  supplier.py  warehouse.py  workspace.py
backend/app/services/: activity_service.py  alert_service.py  analytics_service.py  auth_service.py  inventory_service.py  order_service.py  product_service.py  supplier_service.py  warehouse_service.py  workspace_service.py
backend/app/tests/: conftest.py  test_auth.py  test_inventory.py  test_orders.py  test_products.py  test_warehouses.py
backend/scripts/: apply_migrations.py
backend/sql/: 001_init_schema.sql  002_indexes.sql  003_seed_data.sql  004_future_updates.sql
backend/stockpilot_oms_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+76 files in other folders)
